# coding-interview

./: .gitignore  README.rst  package-lock.json  package.json  requirements.txt  setup.cfg  tsconfig.json  webpack.config.js
client/: app.tsx  index.ts
scss/: app.scss
server/: query_stats.py  settings.py  urls.py  views.py  wsgi.py
server/templates/server/: index.html
