[metadata]
name = coding-interview
version = attr: server.__version__
author = Florian Zimmermann
author_email = f.zimmermann@kaffeehaus-diamant.de
license = BSD 3-Clause License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >= 3.10.1
install_requires =
    Django >= 4.2
include_package_data = true
